# shake-hello

./: images.yml  yaml-shake.cabal
app/: Main.hs
